--- a/nym-vpn-app/src-tauri/Cargo.toml
+++ b/nym-vpn-app/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2021"
 [build-dependencies]
 tauri-build = { version = "2.0.0", features = [] }
 build-info-build = "0.0.39"
+toml = "0.8.5"
 
 [dependencies]
 tauri = { version = "2.1.1", features = ["tray-icon", "image-png"] }
@@ -45,6 +46,7 @@ parity-tokio-ipc = "0.9.0"
 tower = "0.4.8"
 rust_iso3166 = "0.1"
 dirs = "5.0.1"
+semver = "1.0"
 
 # nym deps
 nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
