--- a/.github/workflows/ci-nym-vpn-core-windows.yml
+++ b/.github/workflows/ci-nym-vpn-core-windows.yml
@@ -32,9 +32,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install rust toolchain
-        uses: brndnmtthws/rust-action-rustup@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: stable
+          # TODO let's pin to 1.82.0 as in 1.83.0 the step `Build winfw.dll from mullvad` fails
+          toolchain: 1.82.0
           components: rustfmt, clippy
 
       - name: Set env
