--- a/nym-vpn-core/Makefile
+++ b/nym-vpn-core/Makefile
@@ -21,6 +21,9 @@ build-release: ## Build the Rust workspace in release mode
 build-mac: ## Build the Rust workspace suitable for running the daemon
 	RUSTFLAGS="-C link-arg=-all_load -C link-arg=-ObjC -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__info_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Info.plist -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__launchd_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Launchd.plist" cargo build --release --workspace --exclude nym-gateway-probe
 
+build-win-cross:
+	cargo build --target x86_64-pc-windows-gnu --release
+
 deb: build-deb-vpn-cli build-deb-vpnd build-deb-vpnc ## Build debian packages
 
 # Linting targets
