--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -17,7 +17,6 @@ async-trait.workspace = true
 bincode.workspace = true
 bs58.workspace = true
 bytes.workspace = true
-env_logger.workspace = true
 futures.workspace = true
 hickory-resolver.workspace = true
 ipnetwork.workspace = true
@@ -99,6 +98,8 @@ rand.workspace = true
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 oslog = "0.2.0"
+pretty_env_logger = "0.5.0"
+env_logger = "0.11.5" 
 
 [build-dependencies]
 uniffi = { workspace = true, features = ["build"] }
