--- a/nym-vpn-core/crates/nym-vpn-proto/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-proto/Cargo.toml
@@ -18,6 +18,7 @@ nym-config = { workspace = true, optional = true }
 nym-gateway-directory = { path = "../nym-gateway-directory", optional = true }
 nym-sdk = { workspace = true, optional = true }
 nym-vpn-account-controller = { path = "../nym-vpn-account-controller", optional = true }
+nym-vpn-api-client = { path = "../nym-vpn-api-client", optional = true }
 nym-vpn-network-config = { path = "../nym-vpn-network-config", optional = true }
 nym-vpnd-types = { path = "../nym-vpnd-types", optional = true }
 thiserror = { workspace = true, optional = true }
@@ -33,6 +34,7 @@ conversions = [
     "dep:nym-gateway-directory",
     "dep:nym-sdk",
     "dep:nym-vpn-account-controller",
+    "dep:nym-vpn-api-client",
     "dep:nym-vpn-network-config",
     "dep:nym-vpnd-types",
     "dep:thiserror",
