--- a/nym-vpn-app/package.json
+++ b/nym-vpn-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nym-vpn-app",
   "private": true,
-  "version": "1.0.1-dev",
+  "version": "0.0.0",
   "type": "module",
   "authors": [
     "pierre <dommerc.pierre@gmail.com>",
