--- a/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <!--foreground service exempt android 14-->
 	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" android:minSdkVersion="33"/>
@@ -27,5 +29,12 @@
 				android:name="android.net.VpnService.SUPPORTS_ALWAYS_ON"
 				android:value="true" />
 		</service>
+		<service
+			android:name="net.nymtech.vpn.backend.NymBackend$StateMachineService"
+			android:enabled="true"
+			android:exported="false"
+			android:foregroundServiceType="systemExempted"
+			android:persistent="true"
+			android:stopWithTask="false"/>
     </application>
 </manifest>
